--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,14 +25,5 @@ jobs:
     env:
       APP_ID: ${{ secrets.APP_ID }}
       APP_SECRET: ${{ secrets.APP_SECRET }}
-      TEMPLATE_ID: ${{ secrets.TEMPLATE_ID }}
-      AFTER_TEMPLATE_ID: ${{ secrets.AFTER_TEMPLATE_ID }}
-      USER_ID: ${{ secrets.USER_ID }}
-      START_DATE: ${{ secrets.START_DATE }}
-      BIRTHDAY: ${{ secrets.BIRTHDAY }}
-      CITY: ${{ secrets.CITY }}
-      CITY_LOCATION_DICT: ${{ secrets.CITY_LOCATION_DICT }}
-      PERIOD: ${{ secrets.PERIOD }}
-      END_WORDS: ${{ secrets.END_WORDS }}
-      UV_KEY: ${{ secrets.UV_KEY }}
-      
+      TEST_TEMPLATE_ID: ${{ secrets.TEST_TEMPLATE_ID }}
+      USER_ID: ${{ secrets.USER_ID }}   
